# panel-operation

./: .gitignore  AGENT.md  CLAUDE.md  README.md  SPEC-FPD-SIM-001-REVIEW.md  review-copilot.md
.claude/: settings.json
.codex/: session-memory.md
.github/: copilot-instructions.md
.moai/: manifest.json
.moai/project/: implementation-plan.md  product.md  structure.md  tech.md
docs/: FPGA_Module_Architecture_v1.0.docx  FPGA_Module_Architecture_v2.0.docx
docs/fpga-design/: fpga-panel-power-settings.pplx.md  fpga-radiography-static-imaging.pplx.md  fpga-xray-detector-driving-algorithm.pplx.md  fpga_module_architecture.md
docs/research/: research_01_asi_tft_physics.md  research_02_gate_ic_control.md  research_03_roic_afe_optimal.md  research_04_drive_sequence_patents.md  research_05_lag_correction.md  research_06_calibration.md  research_07_multi_afe_advanced.md
docs/review/: CROSS-VERIFICATION-REPORT.md  review-claude.md  sw-sim-gui-coding-prep.md  test-verification-report.md
rtl/common/: clk_rst_mgr.sv  csi2_lane_dist.sv  csi2_packet_builder.sv  data_out_mux.sv  emergency_shutdown.sv  mcu_data_if.sv  power_sequencer.sv  prot_mon.sv  reg_bank.sv  spi_slave_if.sv
rtl/gate/: gate_nt39565d.sv  gate_nv1047.sv  row_scan_eng.sv
rtl/panel/: panel_ctrl_fsm.sv  panel_integ_ctrl.sv  (+1 more)
sim/: CMakeLists.txt
sim/cocotb_tests/: conftest.py  test_afe_ad711xx.py  test_afe_afe2256.py  test_clk_rst.py  test_csi2_tx.py  test_gate_nt39565d.py  test_gate_nv1047.py  test_integration.py  test_line_buf.py  test_lvds_rx.py  test_panel_fsm.py  test_radiography.py  test_reg_bank.py  test_safety.py  test_spi_slave.py  vector_utils.py
sim/golden_models/core/: CRC16.cpp  CRC16.h  ClockDomain.cpp  ClockDomain.h  ECC.cpp  ECC.h  GoldenModelBase.cpp  GoldenModelBase.h  SignalTypes.h  TestVectorIO.cpp  TestVectorIO.h
sim/golden_models/generators/: gen_afe_vectors.cpp  gen_csi2_vectors.cpp  gen_fsm_vectors.cpp  gen_gate_vectors.cpp  gen_safety_vectors.cpp  gen_spi_vectors.cpp
sim/golden_models/models/: AfeAd711xxModel.cpp  AfeAd711xxModel.h  AfeAfe2256Model.cpp  AfeAfe2256Model.h  AfeSpiMasterModel.cpp  AfeSpiMasterModel.h  ClkRstModel.cpp  ClkRstModel.h  Csi2LaneDistModel.cpp  Csi2LaneDistModel.h  Csi2PacketModel.cpp  Csi2PacketModel.h  DataOutMuxModel.cpp  DataOutMuxModel.h  EmergencyShutdownModel.cpp  EmergencyShutdownModel.h  FoundationConstants.h  GateNt39565dModel.cpp  GateNt39565dModel.h  GateNv1047Model.cpp  GateNv1047Model.h  LineBufModel.cpp  LineBufModel.h  LvdsRxModel.cpp  LvdsRxModel.h  McuDataIfModel.cpp  McuDataIfModel.h  PanelFsmModel.cpp  PanelFsmModel.h  PanelIntegModel.cpp  PanelIntegModel.h  PanelResetModel.cpp  PanelResetModel.h  PowerSeqModel.cpp  PowerSeqModel.h  ProtMonModel.cpp  ProtMonModel.h  RadiogModel.cpp  RadiogModel.h  RegBankModel.cpp  (+5 more)
sim/tests/: TestHelpers.h  test_afe_models.cpp  test_clk_rst.cpp  test_crc16.cpp  test_csi2_model.cpp  test_data_path_models.cpp  test_ecc.cpp  test_gate_models.cpp  test_panel_aux_models.cpp  test_panel_fsm.cpp  test_prot_mon.cpp  test_radiog_model.cpp  test_reg_bank.cpp  test_spi_model.cpp  test_vector_io.cpp
sim/testvectors/: detector_core_reset.hex  panel_fsm_radiography.hex  panel_fsm_static.hex  reg_bank_defaults.hex
sim/verilator/: Makefile  compare_csi2.cpp  compare_fsm.cpp  compare_spi.cpp  golden_compare.cpp  golden_compare.h  sim_main.cpp  waveform_dump.cpp  waveform_dump.h
sim/viewer/: FpdSimViewer.sln  README.md  USER_GUIDE.md
sim/viewer/src/FpdSimViewer/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
sim/viewer/src/FpdSimViewer/Converters/: BoolToVisibilityConverter.cs  FsmStateToColorConverter.cs
sim/viewer/src/FpdSimViewer/Engine/: HardwareComboConfig.cs  HeatmapHelper.cs  RequirementTracker.cs  ScopeChannelConfig.cs  SimulationEngine.cs  SimulationSnapshot.cs  TraceCapture.cs
sim/viewer/src/FpdSimViewer/Models/: AfeAd711xxModel.cs  AfeAfe2256Model.cs  ClkRstModel.cs  EmergencyShutdownModel.cs  GateNt39565dModel.cs  GateNv1047Model.cs  PanelFsmModel.cs  PowerSeqModel.cs  ProtMonModel.cs  RadiogModel.cs  RegBankModel.cs  RowScanModel.cs
sim/viewer/src/FpdSimViewer/Models/Core/: FoundationConstants.cs  GoldenModelBase.cs  SignalTypes.cs
sim/viewer/src/FpdSimViewer/Resources/: Colors.xaml  Styles.xaml
sim/viewer/src/FpdSimViewer/ViewModels/: DataPathViewModel.cs  FsmDiagramViewModel.cs  ImagingCycleViewModel.cs  MainViewModel.cs  NamedValueViewModel.cs  OperationMonitorViewModel.cs  PanelScanViewModel.cs  PhysicalParamViewModel.cs  RegisterEditorViewModel.cs  SimControlViewModel.cs  VerificationViewModel.cs
sim/viewer/src/FpdSimViewer/Views/Controls/: OperationMonitor.xaml  OperationMonitor.xaml.cs  PhysicalParamPanel.xaml  PhysicalParamPanel.xaml.cs  RegisterEditorPanel.xaml  RegisterEditorPanel.xaml.cs  SimControlBar.xaml  SimControlBar.xaml.cs  StatusBarControl.xaml  StatusBarControl.xaml.cs
sim/viewer/src/FpdSimViewer/Views/Drawing/: FsmGraphRenderer.cs  PanelGridRenderer.cs  ScopeRenderer.cs  TimingDiagramRenderer.cs
sim/viewer/src/FpdSimViewer/Views/Tabs/: DataPathTab.xaml  DataPathTab.xaml.cs  FsmDiagramTab.xaml  FsmDiagramTab.xaml.cs  HwSetupTab.xaml  HwSetupTab.xaml.cs  ImagingCycleTab.xaml  ImagingCycleTab.xaml.cs  PanelScanTab.xaml  PanelScanTab.xaml.cs  VerificationTab.xaml  VerificationTab.xaml.cs
sim/viewer/tests/FpdSimViewer.Tests/: FpdSimViewer.Tests.csproj
sim/viewer/tests/FpdSimViewer.Tests/Engine/: CrossValidationTests.cs  HardwareComboConfigTests.cs  IntegrationTests.cs  SimulationEngineTests.cs  TraceCaptureTests.cs
sim/viewer/tests/FpdSimViewer.Tests/Models/: AfeAd711xxModelTests.cs  AfeAfe2256ModelTests.cs  ClkRstModelTests.cs  EmergencyShutdownModelTests.cs  FoundationConstantsTests.cs  GateNt39565dModelTests.cs  GateNv1047ModelTests.cs  PanelFsmModelTests.cs  PowerSeqModelTests.cs  ProtMonModelTests.cs  RadiogModelTests.cs  RegBankModelTests.cs  RowScanModelTests.cs
sim/viewer/tests/FpdSimViewer.Tests/ViewModels/: DataPathViewModelTests.cs  OperationMonitorViewModelTests.cs  PhysicalParamViewModelTests.cs  VerificationViewModelTests.cs
(+38 files in other folders)
